migration to next version of core and open-loadflow
Signed-off-by: Luma <zamarrenolm@aia.es>